--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "module": "src/index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun ./src/index.ts",
-    "dev": "bun --watch ./src/index.ts" 
+    "start": "node ./dist/index.js",
+    "dev": "bun --watch ./src/index.ts" ,
+    "build": "bun build ./src/index.ts --outdir ./dist --target node"
   },
   "devDependencies": {
     "@types/bun": "latest"
